2007-01-01  Ruben Vermeersch  <ruben@savanne.be>

	* src/Makefile.am: Quick'n dirty fix to make HEAD build again. Happy
	newyear all!

2006-12-31  Aaron Bockover  <abock@gnome.org>

	* src/PlayerInterface.cs:
	* src/Banshee.Base/Gui/SeekDialog.cs: Synced functionality, minor fixes

2006-12-31  Aaron Bockover  <abock@gnome.org>

	* src/Makefile.am:
	* src/Banshee.Base/Makefile.am:
	* src/PlayerWindowSchema.cs:
	* src/Banshee.Base/Banshee.Configuration.Schema/PlayerWindowSchema.cs: 
	Moved PlayerWindowSchema to Banshee.Base

	* build/Makefile.am: Install gconf-schema-extractor.exe

	* configure.ac: Bump to 0.11.4

2006-12-31  Aaron Bockover  <abock@gnome.org>

	* src/PlayerInterface.cs: Use Album instead of DisplayAlbum, set the
	MoreInfoUri on the TrackInfoHeader; Use a stop icon instead of a pause
	icon if the stream cannot pause; support the Contacting engine state

	* src/StockIcons.cs: Added stop icon

	* src/PlaylistView.cs: Added protected IntPtr constructor

	* src/Banshee.Base/Banshee.Metadata/SchedulerMetadataProvider.cs: Added
	some more null checks
	
	* src/Banshee.Plugins/NotificationAreaIcon/NotificationAreaIconPlugin.cs:
	Use Album instead of DisplayAlbum

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayerEngine.cs: Support parsing
	Real Radio clip metadata and sending results as StreamTags; support 
	cover art lookup inside live streams when track changes occur; support
	virtual sub-tracks on live streams when duration events come in; this
	allows the UI to show proper position/duration on subsets of a live stream
	
	* src/Banshee.Base/PlayerEngineCore.cs: Added CanPause property, if
	Pause() is called and the track cannot pause, stop it instead
	
	* src/Banshee.Base/MediaEngine/PlayerEngine.cs: Added a Contacting state
	and use current_track.IsLive instead of current_track is UnknownTrackInfo
	to ensure tag updates only occur on live/radio streams
	
	* src/Banshee.Base/StreamTagger.cs: Added CommonTags.MoreInfoUri and